--- a/gb/18/10/10/n10773796.md
+++ b/gb/18/10/10/n10773796.md
@@ -1,21 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>邪恶帝国——里根总统谴责苏联共产政权</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2018/10/Photograph_of_President_Reagan_addressing_the_Annual_Convention_of_the_National_Association_of_Evangelicals__Evil..._-_NARA_-_198535-600x400.jpg" />
+<a href="https://d1qenr1x5ix28c.cloudfront.net/L9sJt7bnq"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>1983年3月8日，里根总统在福音教派全国联合会的年会上发表了著名的“邪恶帝国”演讲，预言苏联共产政权必将崩溃。（公有领域）
 </h6>
 <hr>
-<p>【大纪元2018年10月10日讯】【编者按】1983年3月8日，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%87%8C%E6%A0%B9%E6%80%BB%E7%BB%9F.md#1">里根总统</a>在福音教派全国联合会的年会上发表演讲，阐述了宗教根基与<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E4%BB%B7%E5%80%BC%E8%A7%82.md#1">传统价值观</a>对于美国的重要意义，强调美国对苏联的立场：冻结其在全球的野心，以实力求和平。</p>
-<p>里根在讲话中把苏联喻为“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%82%AA%E6%81%B6%E5%B8%9D%E5%9B%BD.md#1">邪恶帝国</a>”，并预言其必将崩溃。“我相信共产主义是人类历史上一个悲惨而诡异的篇章——即使这一章已经临近终结。”他说：“我们今天所面临的真正危机是精神上的；从根本上说，它是对道德意志和信仰的检验。”</p>
-<p>这次“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%82%AA%E6%81%B6%E5%B8%9D%E5%9B%BD.md#1">邪恶帝国</a>”演说与里根的另外两次演讲“零选择”和“战争开始”一起标志着重大转折：美国在冷战中由守转攻，冷战进一步升级。</p>
+	<p>【大纪元2018年10月10日讯】【编者按】1983年3月8日，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%87%8C%E6%A0%B9%E6%80%BB%E7%BB%9F.md#1">里根总统</a>在福音教派全国联合会的年会上发表演讲，阐述了宗教根基与<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E4%BB%B7%E5%80%BC%E8%A7%82.md#1">传统价值观</a>对于美国的重要意义，强调美国对苏联的立场：冻结其在全球的野心，以实力求和平。</p>
+<p>里根在讲话中把苏联喻为“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%82%AA%E6%81%B6%E5%B8%9D%E5%9B%BD.md#1">邪恶帝国</a>”，并预言其必将崩溃。“我相信共产主义是人类历史上一个悲惨而诡异的篇章——即使这一章已经临近终结。”他说：“我们今天所面临的真正危机是精神上的；从根本上说，它是对道德意志和信仰的检验。”</p>
+<p>这次“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%82%AA%E6%81%B6%E5%B8%9D%E5%9B%BD.md#1">邪恶帝国</a>”演说与里根的另外两次演讲“零选择”和“战争开始”一起标志着重大转折：美国在冷战中由守转攻，冷战进一步升级。</p>
 <p>当年，里根的强硬措辞曾引起批评家的担忧，里根回应说：“多年来，我们的领导人不能如实地描述苏联……苏联体制一直以来蓄意谋杀、虐待它的人民。数以百万计的人遭到屠杀。”他反问道：“我们为何不能这么说？”（指用“邪恶”形容苏联）</p>
 <p>1991年12月，苏联悄然解体，应验了里根的断言。然而，邪恶犹存。今日，美国在川普总统的带领下，正在向邪恶势力展开新一波反击，为和平与自由而战。</p>
 <p>*****</p>
-	<a type='text/javaa' src='//vs.youmaker.com/js/jwplayer/jwplayer8-all.js'></a>
-	<link rel='stylesheet' target="_blank" href='//vs.youmaker.com/css/api2.css' type='text/css' media='all' />
-<div class="video_fit_container"><a ><a href="https://git.io/JvPlZ"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a="56.25%" src="//vs.youmaker.com/assets/player/bdd285ad-23c2-4695-5e38-7c0fa0590a3f?r=16&#215;9&amp;s=960&#215;540&amp;d=726&api=2&url=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F18%2F10%2F10%2Fn10773796.md#1"></a></div>
-<div class="video_fit_container"><a ><a href="https://git.io/JvPlZ"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a="56.25%" src="//vs.youmaker.com/assets/player/cff9eeb3-28a2-4f8b-64fe-03ad0313bb34?r=16&#215;9&amp;s=960&#215;540&amp;d=994&api=2&url=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F18%2F10%2F10%2Fn10773796.md#1"></a></div>
+<div class="video_fit_container epoch_player"><div class="player-container" id="player-container-bdd285ad-23c2-4695-5e38-7c0fa0590a3f" data-id="player-bdd285ad-23c2-4695-5e38-7c0fa0590a3f"></div></div><a src="//vs.youmaker.com/assets/player/bdd285ad-23c2-4695-5e38-7c0fa0590a3f?r=16&#215;9&amp;s=960&#215;540&amp;d=726&&api=7&logo=true&url=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F18%2F10%2F10%2Fn10773796.md#1"></a>
+<div class="video_fit_container epoch_player"><div class="player-container" id="player-container-cff9eeb3-28a2-4f8b-64fe-03ad0313bb34" data-id="player-cff9eeb3-28a2-4f8b-64fe-03ad0313bb34"></div></div><a src="//vs.youmaker.com/assets/player/cff9eeb3-28a2-4f8b-64fe-03ad0313bb34?r=16&#215;9&amp;s=960&#215;540&amp;d=994&&api=7&logo=true&url=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F18%2F10%2F10%2Fn10773796.md#1"></a>
 <p>以下是里根“邪恶帝国”演说的中文全文。</p>
 <p>尊敬的宗教领袖们、霍金斯参议员、尊贵的弗罗里达国会代表团的成员、先生们：你们的欢迎让我感受到无法言表的温暖。今天在这里我感到非常愉快。</p>
 <p>一、美国的政治与宗教</p>
@@ -28,7 +26,7 @@
 <p>最后，当探究美国何以如此伟大和富有创造力的秘密时，托克维尔这位对于美国民主最为敏锐的观察家雄辩地指出：“当我走进美国的教堂，听到它那闪耀着公义之火的布道时，我才真正明白了美国何以如此伟大和天赋非凡。美国人是虔信上帝的。而一旦美国不再虔诚了，它也将不再伟大。”</p>
 <p>今天能与你们这些通过保持美国人的虔诚而使美国继续伟大的人士相聚，我感到非常愉快。只有通过你们和其他成千上万人的工作和祈祷，才能使我们在这个危机四伏的世纪有望幸存下来，并使自由这一人类最美好的希望生机勃勃。</p>
 <p>我希望你们知道，我们的行政部门是由一种政治哲学推动的，这一政治哲学在你们、你们的家庭、教会、邻里和社区中间发现了美国的伟大：即各种制度均致力于鼓励和培植诸如关心他人和尊重上帝之下法治之类的价值观。</p>
-<p>二、世俗主义思潮对<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E4%BB%B7%E5%80%BC%E8%A7%82.md#1">传统价值观</a>的冲击</p>
+<p>二、世俗主义思潮对<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E4%BB%B7%E5%80%BC%E8%A7%82.md#1">传统价值观</a>的冲击</p>
 <p>现在，你们想必与我一样清楚，正是这些价值观使我们与流行于当下许多人中间的态度大相径庭，或与他们格格不入。他们奉行一种现代化的世俗主义，将我们文明赖以立基的价值观视如粪土，尽管这些价值观坚实可靠并经过时间的检验。不管他们出于何种善意，他们的价值体系与大多数美国人所持的立场截然不同。虽然他们宣称，他们正使我们从对过去的迷信中解放出来，但他们从事的工作却是借助政府的统治和威权来监控我们。有时候他们的嗓门似乎比我们大，但他们从未赢得多数。</p>
 <p>那种调门拔高的例子在最近华盛顿的一场争论中显而易见。自从我卷入这场争论以来，我就期待着能听到美国年轻人父母们的想法。他们究竟愿意向政府移交多少他们作为人之父母的特权？</p>
 <p>让我尽可能简明扼要地说一下这个事例。一个动机纯正、对于日益增加的少年非法生育和堕胎现象深感关切的公民团体不久前成立了一个全国性的医疗诊所网络，向那些不到法定年龄的女孩子们提供帮助，并希望能减轻她们所面临的困境。我要说，我并不对他们的意图吹毛求疵。然而，在这项意愿良好的努力中，这些诊所居然决定在未征求她们父母意见的情况下，向这些女孩子提供节育建议、药物和方法。</p>
@@ -79,47 +77,46 @@
 <p>愿上帝保佑你们，谢谢大家。</p>
 <p>（翻译：冬云）</p>
 <p>责任编辑：高义</p>
-
+	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/10/9/n10771577.md#1">和平砥柱——丘吉尔的“铁幕”演说</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/6/7/n10464943.md#1">承继里根 重振美国 川普抗击共产幽灵（下）</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/1/18/n10068772.md#1">学者：中共以无神论抵制有神论 恐将溃败</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/2/24/n4647283.md#1">里根一生──终结共产 兑现神的托付</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/14/6/6/n4172138.md#1">曹长青：里根总统的伟大人生</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/6/n4172138.md#1">曹长青：里根总统的伟大人生</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/2/24/n4647283.md#1">里根一生──终结共产 兑现神的托付</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/1/18/n10068772.md#1">学者：中共以无神论抵制有神论 恐将溃败</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/7/n10464943.md#1">承继里根 重振美国 川普抗击共产幽灵（下）</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/6/7/n10464943.md#1">承继里根 重振美国 川普抗击共产幽灵（下）</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/2/24/n4647283.md#1">里根一生──终结共产 兑现神的托付</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/23/n10802534.md#1" target="_blank">韩丽明：游街</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/29/n10261439.md#1" target="_blank">从死神手里夺回来的生命</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/17/n10309909.md#1" target="_blank">心升：以史为镜看毛邪（中）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/10/11/n4547562.md#1" target="_blank">我们告诉未来：封锁与反封锁</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/10/n10773796.htm">邪恶帝国——里根总统谴责苏联共产政权</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/10/n10773796.htm">邪恶帝国——里根总统谴责苏联共产政权</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/18/10/10/n10773796.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/18/10/10/n10773796.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
